<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
	<modelVersion>4.0.0</modelVersion>
	<groupId>de.uniwue.d3web</groupId>
	<artifactId>KnowWE</artifactId>
	<packaging>pom</packaging>
	<name>KnowWE</name>
	<version>0.2-SNAPSHOT</version>
	<url>http://www.d3web.de/</url>
	<issueManagement>
		<system>Bugzilla</system>
		<url>https://tickets.denkbares.com/</url>
	</issueManagement>
	<ciManagement>
		<system>Hudson</system>
		<url>https://isci.informatik.uni-wuerzburg.de/hudson/</url>
	</ciManagement>
	<licenses>
		<license>
			<name>GNU Lesser General Public License, version 3</name>
			<url>http://www.gnu.org/licenses/lgpl.txt</url>
		</license>
	</licenses>
	<build>
		<defaultGoal>package</defaultGoal>
		<plugins>
			<plugin>
				<artifactId>maven-compiler-plugin</artifactId>
				<configuration>
					<source>1.8</source>
					<target>1.8</target>
					<encoding>UTF-8</encoding>
				</configuration>
			</plugin>
			<!-- Ignore test failures -->
			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-surefire-plugin</artifactId>
				<configuration>
					<testFailureIgnore>true</testFailureIgnore>
				</configuration>
			</plugin>
			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-war-plugin</artifactId>
				<version>2.3-uniwue</version>
			</plugin>
			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-javadoc-plugin</artifactId>
				<version>2.6.1</version>
			</plugin>
			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-source-plugin</artifactId>
				<version>2.1.1</version>
				<executions>
					<execution>
						<id>sources</id>
						<phase>package</phase>
						<goals>
							<goal>jar</goal>
						</goals>
					</execution>
				</executions>
			</plugin>

			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-release-plugin</artifactId>
				<version>2.0</version>
				<configuration>
					<autoVersionSubmodules>true</autoVersionSubmodules>
				</configuration>
			</plugin>
			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-site-plugin</artifactId>
				<version>2.1.1</version>
			</plugin>
			<plugin>
				<groupId>com.atlassian.maven.plugins</groupId>
				<artifactId>maven-clover2-plugin</artifactId>
				<version>3.0.2</version>
				<configuration>
					<generatePdf>true</generatePdf>
					<generateHtml>true</generateHtml>
					<generateXml>true</generateXml>
					<license><![CDATA[nrqQXAFjxdRRPQOSKOOEOvHIrnNhOJArLOsnknIHocNlqk
									mi2KTnu3O2OFOgc7xNpMqgmU2KEa3EV2PMKJyrvsDdSe<i
									ormQsXMMrrrOPQQPmMqSwNNQnmqNpQRMOQsvvxwVxTuSOO
									nRmnmqmUUnourvpummmmmmUUnourvpummmmmmUUBkltN5U
									Unmmmm]]></license>
				</configuration>
			</plugin>
		</plugins>
		<pluginManagement>
			<plugins>
				<!--This plugin's configuration is used to store Eclipse m2e settings 
					only. It has no influence on the Maven build itself. -->
				<plugin>
					<groupId>org.eclipse.m2e</groupId>
					<artifactId>lifecycle-mapping</artifactId>
					<version>1.0.0</version>
					<configuration>
						<lifecycleMappingMetadata>
							<pluginExecutions>
								<pluginExecution>
									<pluginExecutionFilter>
										<groupId>
											org.apache.maven.plugins
										</groupId>
										<artifactId>
											maven-dependency-plugin
										</artifactId>
										<versionRange>
											[2.1,)
										</versionRange>
										<goals>
											<goal>build-classpath</goal>
										</goals>
									</pluginExecutionFilter>
									<action>
										<ignore></ignore>
									</action>
								</pluginExecution>
								<pluginExecution>
									<pluginExecutionFilter>
										<groupId>
											org.apache.maven.plugins
										</groupId>
										<artifactId>
											maven-antrun-plugin
										</artifactId>
										<versionRange>
											[1.3,)
										</versionRange>
										<goals>
											<goal>run</goal>
										</goals>
									</pluginExecutionFilter>
									<action>
										<ignore></ignore>
									</action>
								</pluginExecution>
							</pluginExecutions>
						</lifecycleMappingMetadata>
					</configuration>
				</plugin>
			</plugins>
		</pluginManagement>
	</build>
	<reporting>
		<plugins>
			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-javadoc-plugin</artifactId>
				<version>2.7</version>
				<reportSets>
					<reportSet>
						<id>JavaDocHTML</id>
						<reports>
							<report>javadoc</report>
						</reports>
						<configuration>
							<name>JavaDoc</name>
							<description>HTML documentation.</description>
							<show>public</show>
							<destDir>apidocs_html</destDir>
						</configuration>
					</reportSet>
				</reportSets>
			</plugin>
			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-surefire-report-plugin</artifactId>
				<version>2.5</version>
			</plugin>
		</plugins>
	</reporting>
	<properties>
		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
		<maven.clover.encoding>UTF-8</maven.clover.encoding>
		<sonar.core.codeCoveragePlugin>clover</sonar.core.codeCoveragePlugin>
		<sonar.clover.version>3.0.2</sonar.clover.version>
		<sonar.dynamicAnalysis>reuseReports</sonar.dynamicAnalysis>
		<sonar.surefire.reportsPath>target/surefire-reports</sonar.surefire.reportsPath>
		<sonar.clover.reportPath>target/site/clover/clover.xml</sonar.clover.reportPath>
		<versionatorVersion>1.7</versionatorVersion>
		<d3webCoreVersion>0.2-SNAPSHOT</d3webCoreVersion>
	</properties>
	<modules>
		<module>KnowWE-Resources</module>
		<module>KnowWE-core</module>
		<module>KnowWE-Plugin-ExtensionPoints</module>
		<module>KnowWE-Plugin-DiaFlux</module>
		<module>KnowWE-Plugin-QuickInterview</module>
		<module>KnowWE-Plugin-d3web-basic</module>
		<module>KnowWE-KDOMParseUtils</module>
		<module>KnowWE-Plugin-d3web-MarkupSet</module>
		<module>KnowWE-Plugin-CI4KE</module>
		<module>KnowWE-Plugin-TestCase</module>
		<module>KnowWE-GlobalTestUtils</module>
		<module>KnowWE-Plugin-Tagging</module>
		<module>KnowWE-Plugin-Core</module>
		<module>KnowWE-Plugin-KBRenderer</module>
		<module>KnowWE-Plugin-JSPWiki-Connector</module>
		<module>KnowWE-Plugin-CI4KE-d3web</module>
		<module>KnowWE-Plugin-InstantEdit</module>
		<module>KnowWE-Plugin-TestCases</module>
		<module>KnowWE-Plugin-Table</module>
		<module>KnowWE-Plugin-JSPWiki-MarkupSet</module>
		<module>KnowWE-Plugin-Include</module>
		<module>KnowWE-Plugin-Ontology-MarkupSet</module>
		<module>KnowWE-Plugin-Rdf2GoSemanticCore</module>
		<module>KnowWE-Plugin-Wikicontent-Download</module>
		<module>KnowWE-Plugin-Visualization</module>
		<module>KnowWE-Plugin-OntoVis</module>
		<module>KnowWE-UITests</module>
	</modules>
	<repositories>
		<repository>
			<id>infovi-artifactory</id>
			<url>http://isci.informatik.uni-wuerzburg.de:8080/artifactory/repo/</url>
		</repository>
		<repository>
			<id>knowwe-snapshots</id>
			<url>http://isci.informatik.uni-wuerzburg.de:8080/artifactory/knowwe-snapshots/</url>
			<releases>
				<enabled>false</enabled>
			</releases>
			<snapshots>
				<updatePolicy>interval:120</updatePolicy>
				<checksumPolicy>ignore</checksumPolicy>
			</snapshots>
		</repository>
	</repositories>

	<pluginRepositories>
		<pluginRepository>
			<id>contrib</id>
			<url>http://isci.informatik.uni-wuerzburg.de:8080/artifactory/infovi-contrib/</url>
		</pluginRepository>
	</pluginRepositories>

	<distributionManagement>
		<snapshotRepository>
			<id>knowwe-snapshots</id>
			<name>d3web Snapshots</name>
			<url>http://isci.informatik.uni-wuerzburg.de:8080/artifactory/knowwe-snapshots/</url>
		</snapshotRepository>
	</distributionManagement>

	<scm>
		<connection>scm:svn:https://isci.informatik.uni-wuerzburg.de/svn/d3web-KnowWE/trunk/KnowWE</connection>
		<developerConnection>scm:svn:https://isci.informatik.uni-wuerzburg.de/svn/d3web-KnowWE/trunk/KnowWE</developerConnection>
		<url>scm:svn:https://isci.informatik.uni-wuerzburg.de/svn/d3web-KnowWE/trunk/KnowWE</url>
	</scm>

	<organization>
		<name>Universität Würzburg</name>
		<url>http://uni-wuerzburg.de/</url>
	</organization>

</project>
